stacks/enigma-cluster/configs/kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-for-labels
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: The label 'app.kubernetes.io/name' is required.
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: ?*
